--- a/.eslintrc
+++ b/.eslintrc
@@ -10,8 +10,10 @@
         "node": true
     },
     "rules": {
-        "semi":"off"
-     
+        "semi":"off",
+        "require-jsdoc" : 0,
+        "linebreak-style": 0,
+        "operator-linebreak":"off"
     },
     "extends": ["eslint:recommended", "google"]
 }
