--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "env": {
         "es6": true,
         "browser": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "rules": {
         "semi":"off",
@@ -15,5 +16,6 @@
         "linebreak-style": 0,
         "operator-linebreak":"off"
     },
+    "plugins": ["jest"],
     "extends": ["eslint:recommended", "google"]
 }
